[package]
name = "mqtt-client"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-io-async = { version = "0.7.0" }
embedded-time = { version = "0.12.1" }
heapless = { version = "0.9.2" }

embassy-time = { version = "0.5.0", optional = true }
defmt = { version = "1.0.1", optional = true }

[features]
v50 = []
embassy = ["embassy-time"]
defmt = ["dep:defmt", "embedded-io-async/defmt", "heapless/defmt"]
